[package]
name = "sptcloud"
version = "0.1.0"
authors = ["Til Blechschmidt <til@blechschmidt.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.5.4"
walkdir = "2.3.1"
tempfile = "3.1.0"
clap = "2.33.0"
log = { version = "^0.4.8", features = ["std"] }
ansi_term = "0.12"
uuid = { version = "0.8.1", features = ["v4"] }